fix SwitchingProviderTest