@@ -77,7 +77,6 @@ jar {
 
 test {
     useJUnitPlatform()
-    jvmArgs = ['--add-opens', 'jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED']
     testLogging {
         events('failed')
     }
